# Wallet

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yaml  entrypoint.sh  pyproject.toml
app/: container.py  dependencies.py  exceptions.py  main.py  uow.py  use_cases.py
app/api/v1/: routers.py
app/config/: database.py  logger.py  settings.py
app/healthcheck/v1/: __init__.py  router.py  schemas.py  service.py
app/models/: base.py  enums.py  wallet.py
app/repository/: __init__.py  base.py  transaction.py  wallet.py
app/schemas/: __init__.py  base.py  exceptions.py  response.py  transaction.py  wallet.py
app/services/: __init__.py  transaction.py  wallet.py
migrations/: env.py
migrations/versions/: 2025_10_22_1115-0486503be796_initial_setup.py
tests/: README.md  conftest.py  test_database.py  test_error_handling.py  test_healthcheck_endpoints.py  test_integration.py  test_transaction_endpoints.py  test_wallet_endpoints.py
